routing is a success

--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -2,25 +2,25 @@
 <div class="col">
     <div class="row">
 
-      <li class="nav-item">
+        <li class="nav-item">
           <a class="navbar-brand ml-2" href="/"><img id="navlogo" src="" alt="Jewelry Gypsy Desings"></a>
-      </li>
+        </li>
 
-      <li id="tabs" class="nav-item">
-          <a class="nav-link disabled" href="/#!/shop">Shop</a>
-      </li>
-
-        <li id="tabs" class="nav-item some" >
-          <a class="nav-link disabled" href="/#!/about">About</a>
-      </li>
+        <li id="tabs" class="nav-item">
+          <a class="nav-link " href="/#!/shop">Shop</a>
+        </li>
 
         <li id="tabs" class="nav-item some" >
-        <a class="nav-link disabled" href="/#!/blog">Blog</a>
-    </li>
+          <a class="nav-link " href="/#!/about">About</a>
+        </li>
 
         <li id="tabs" class="nav-item some" >
-      <a class="nav-link disabled" href="/#!/contact">Contact</a>
-  </li>
+          <a class="nav-link " href="/#!/blog">Blog</a>
+        </li>
+
+        <li id="tabs" class="nav-item some" >
+          <a class="nav-link " href="/#!/contact">Contact</a>
+        </li>
 
   </div>
 </div>
