added jumbotron to home and carousel for shop (this is all templating for the client to see)

--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -3,7 +3,7 @@
     <div class="row">
 
         <li class="nav-item">
-          <a class="navbar-brand ml-2" href="/"><img id="navlogo" src="" alt="Jewelry Gypsy Desings"></a>
+          <a class="navbar-brand ml-2" href="/"><img id="navlogo" src="app\assets\JGD_Logo.jpg" alt="Jewelry Gypsy Desings"></a>
         </li>
 
         <li id="tabs" class="nav-item">
