--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -16,10 +16,10 @@ body {
   height: 75px;
   background:
   /* color overlay */
-    linear-gradient(
-      rgba(240, 212, 0, 0.45),
-      rgba(0, 0, 0, 0.45)
-    ),
+    // linear-gradient(
+    //   rgba(240, 212, 0, 0.45),
+    //   rgba(0, 0, 0, 0.45)
+    // ),
     /* image to overlay */
     url(http://images.cdn.fotopedia.com/_avPIZmqM3w-7z161LH_268-hd.jpg);
 }
