--- a/app/components/shop/shop.html
+++ b/app/components/shop/shop.html
@@ -1,1 +1,34 @@
-<h1> Stop HTML </h1>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container jumboShop">
+    <div id="carouselPics" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselPics" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselPics" data-slide-to="1"></li>
+        <li data-target="#carouselPics" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <img class="d-block img-fluid" src="app\assets\necklace.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Grab Life by the Horns!</h3>
+              <p>A perfect necklace for any occassion where you will most certainly be making a power move!</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="app\assets\necklace (2).jpg" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Pendant</h3>
+              <p>When you are just feeling yourself</p>
+            </div>
+        </div>
+          <div class="carousel-item">
+            <img class="d-block img-fluid" src="app\assets\bacelets.jpg" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Bracelets!</h3>
+              <p>Hey look at all those bracelets!</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
