working on base styling for the shop page

--- a/app/components/nav/nav.scss
+++ b/app/components/nav/nav.scss
@@ -1,4 +1,10 @@
-#navlogo {
-  max-height: 75px;
-  max-width: 100px;
+.jgd-navbar{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: white;
+}
+
+.jgd-form-btn{
+  margin-left: 10px;
+  border-left: 1px solid #969696;
 }
