--- a/app/components/shop/shop.html
+++ b/app/components/shop/shop.html
@@ -1,5 +1,5 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container jumboShop">
+<div class="shop-carousel">
+  <div class="container">
     <div id="carouselPics" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselPics" data-slide-to="0" class="active"></li>
@@ -29,6 +29,134 @@
             </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+<div class="shop-content">
+  <div class="container">
+    <div class="row">
+        <div class="col-md-4">
+          <div class="list-group">
+            <a href="#" class="list-group-item disabled">
+              Necklace categories
+            </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Beaded
+                <span class="badge badge-default badge-pill">56</span>
+              </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Pendant
+                <span class="badge badge-default badge-pill">23</span>
+              </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Charm
+                <span class="badge badge-default badge-pill">20</span>
+              </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Locket
+                <span class="badge badge-default badge-pill">10</span>
+              </a>
+          </div>
+          <div class="list-group">
+            <a href="#" class="list-group-item disabled">
+              Bracelets categories
+            </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Charm
+                <span class="badge badge-default badge-pill">56</span>
+              </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Beaded
+                <span class="badge badge-default badge-pill">23</span>
+              </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Cuff
+                <span class="badge badge-default badge-pill">20</span>
+              </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Seadbead
+                <span class="badge badge-default badge-pill">10</span>
+              </a>
+          </div>
+          <div class="list-group">
+            <a href="#" class="list-group-item disabled">
+              Earings
+            </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Hoop
+                <span class="badge badge-default badge-pill">56</span>
+              </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Fish Hook
+                <span class="badge badge-default badge-pill">23</span>
+              </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Kidney Wire
+                <span class="badge badge-default badge-pill">20</span>
+              </a>
+          </div>
+          <div class="list-group">
+            <a href="#" class="list-group-item disabled">
+              Choker
+            </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Beaded
+                <span class="badge badge-default badge-pill">56</span>
+              </a>
+              <a class="list-group-item list-group-item-action justify-content-between">
+                Leather
+                <span class="badge badge-default badge-pill">23</span>
+              </a>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <div class="col-md-4">
+            <div class="shop-card card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\bacelets.jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Piece Name</h4>
+                  <p class="card-text">Description of Piece</p>
+                  <p class="card-text">Price of Piece</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="shop-card card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\bacelets.jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Piece Name</h4>
+                  <p class="card-text">Description of Piece</p>
+                  <p class="card-text">Price of Piece</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="shop-card card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\bacelets.jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Piece Name</h4>
+                  <p class="card-text">Description of Piece</p>
+                  <p class="card-text">Price of Piece</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="shop-card card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\bacelets.jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Piece Name</h4>
+                  <p class="card-text">Description of Piece</p>
+                  <p class="card-text">Price of Piece</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+            </div>
+          </div>
+          
+        </div>
     </div>
   </div>
 </div>
