--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -1,4 +1,4 @@
-<div id="footer">
+<!-- <div id="footer">
     <div class="container">
         <div class="row">
               <div class="col-md-4">
@@ -18,4 +18,4 @@
               </div>
             </div>
     </div>
-</div>
+</div> -->
