--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -1,28 +1,31 @@
-<ul class="nav  navbar-light p-2 mb-2 topNav">
-<div class="col">
-    <div class="row">
+<ul class="jgd-navbar navbar navbar-toggleable-md navbar-light bg-faded">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="/#!/home">J.G.D</a>
 
-        <li class="nav-item">
-          <a class="navbar-brand ml-2" href="/"><img id="navlogo" src="app\assets\JGD_Logo.jpg" alt="Jewelry Gypsy Desings"></a>
-        </li>
-
-        <li id="tabs" class="nav-item">
-          <a class="nav-link " href="/#!/shop">Shop</a>
-        </li>
-
-        <li id="tabs" class="nav-item some" >
-          <a class="nav-link " href="/#!/about">About</a>
-        </li>
-
-        <li id="tabs" class="nav-item some" >
-          <a class="nav-link " href="/#!/blog">Blog</a>
-        </li>
-
-        <li id="tabs" class="nav-item some" >
-          <a class="nav-link " href="/#!/contact">Contact</a>
-        </li>
-
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/#!/home">Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/#!/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/#!/shop">Shop</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/#!/contact">Contact</a>
+      </li>
+    </ul>
+    <form class=" form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class=" btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+    </form>
+    <a href="#" class="jgd-form-btn btn btn-success"><span class="fa fa-shopping-cart"></span></a>
   </div>
-</div>
-
 </ul>
+
+
+  <!-- <a class="nav-link " href="/#!/about">About</a> -->
