shop page looks way better

--- a/app/components/shop/shop.html
+++ b/app/components/shop/shop.html
@@ -36,7 +36,7 @@
 <div class="shop-content">
   <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-2 pull-left">
           <div class="list-group">
             <a href="#" class="list-group-item disabled">
               Necklace categories
@@ -110,53 +110,99 @@
               </a>
           </div>
         </div>
-        <div class="col-md-8">
-          <div class="col-md-4">
-            <div class="shop-card card" style="width: 20rem;">
+        <div class="col-md-10">
+          <div class="shop-card col-xs-4">
+            <div class="card" style="width: 20rem;">
               <img class="shop-card-img card-img-top" src="app\assets\bacelets.jpg" alt="Card image cap">
                 <div class="card-block">
-                  <h4 class="card-title">Piece Name</h4>
-                  <p class="card-text">Description of Piece</p>
-                  <p class="card-text">Price of Piece</p>
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Add to cart</a>
+                </div>
+            </div>
+          </div>
+          <div class="shop-card col-xs-4">
+            <div class="card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\necklace (2).jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Add to Cart</a>
                 </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="shop-card card" style="width: 20rem;">
-              <img class="shop-card-img card-img-top" src="app\assets\bacelets.jpg" alt="Card image cap">
+          <div class="shop-card col-xs-4">
+            <div class="card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\necklace.jpg" alt="Card image cap">
                 <div class="card-block">
-                  <h4 class="card-title">Piece Name</h4>
-                  <p class="card-text">Description of Piece</p>
-                  <p class="card-text">Price of Piece</p>
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Add to Cart</a>
                 </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="shop-card card" style="width: 20rem;">
+          <div class="shop-card col-xs-4">
+            <div class="card" style="width: 20rem;">
               <img class="shop-card-img card-img-top" src="app\assets\bacelets.jpg" alt="Card image cap">
                 <div class="card-block">
-                  <h4 class="card-title">Piece Name</h4>
-                  <p class="card-text">Description of Piece</p>
-                  <p class="card-text">Price of Piece</p>
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Add to cart</a>
+                </div>
+            </div>
+          </div>
+          <div class="shop-card col-xs-4">
+            <div class="card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\necklace (2).jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Add to Cart</a>
                 </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="shop-card card" style="width: 20rem;">
-              <img class="shop-card-img card-img-top" src="app\assets\bacelets.jpg" alt="Card image cap">
+          <div class="shop-card col-xs-4">
+            <div class="card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\necklace.jpg" alt="Card image cap">
                 <div class="card-block">
-                  <h4 class="card-title">Piece Name</h4>
-                  <p class="card-text">Description of Piece</p>
-                  <p class="card-text">Price of Piece</p>
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Add to Cart</a>
                 </div>
             </div>
           </div>
-          
-        </div>
+          <div class="shop-card col-xs-4">
+            <div class="card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\bacelets.jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Add to cart</a>
+                </div>
+            </div>
+          </div>
+          <div class="shop-card col-xs-4">
+            <div class="card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\necklace (2).jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+            </div>
+          </div>
+          <div class="shop-card col-xs-4">
+            <div class="card" style="width: 20rem;">
+              <img class="shop-card-img card-img-top" src="app\assets\necklace.jpg" alt="Card image cap">
+                <div class="card-block">
+                  <h4 class="card-title">Card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Add to Cart</a>
+                </div>
+            </div>
+          </div>
+
+      </div>
     </div>
   </div>
 </div>
