--- a/app/components/shop/shop.scss
+++ b/app/components/shop/shop.scss
@@ -18,13 +18,31 @@
   padding-bottom:50px;
 }
 
+    .shop-content .container{
+      margin: 0 !important;
+      max-width: 100%;
+      width:100%;
+    }
+
+    .shop-content .sho-nav{
+      width:50%;
+    }
 .shop-card-img{
   max-width:380px;
   max-height: 180px;
 }
 
 .shop-card{
-  display:inline-block;
-  margin-bottom: 30px;
-  margin-right:30px;
+  display: inline-block;
+  margin: 0px !important;
+  padding-right:15px;
+  padding-bottom: 30px;
+}
+
+.card{
+  margin: 0px !important;
+}
+
+.card-block{
+  margin: 0px !important;
 }
