adding some styling to the homme page

--- a/app/components/home/home.scss
+++ b/app/components/home/home.scss
@@ -1,3 +1,23 @@
-.homejumbo{
-  background-color: #000;
+.jumbotron{
+ background-color: #e1bbff;
+ text-shadow: -20px 2px 17px black;
+ font-family: 'Great Vibes', cursive;
+ font-size: 100em;
+ color: #f7f7f9;
+}
+
+.card-img-top{
+  padding-left: 100px;
+  padding-top: 25px;
+  max-width:400px;
+  max-height: 300px;
+}
+
+.home-btn{
+
+}
+
+.lead{
+  margin-top: 50px;
+  margin-left: 360px;
 }
