--- a/app/components/shop/shop.html
+++ b/app/components/shop/shop.html
@@ -1,3 +1,4 @@
+<nav></nav>
 <div class="shop-carousel">
   <div class="container">
     <div id="carouselPics" class="carousel slide" data-ride="carousel">
