most of the styling done. now its time to start the database

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -2,17 +2,17 @@
   <div class="container">
     <h1 class="display-3 text-center">Jewelry Gypsy Designs</h1>
     <p class="lead">
-      <a class="home-btn text-center btn btn-primary btn-lg" href="#" role="button">Home</a>
-      <a class="home-btn text-center btn btn-primary btn-lg" href="/#!/shop" role="button">Shop</a>
-      <a class="home-btn text-center btn btn-primary btn-lg" href="/#!/contact" role="button">Contact</a>
-      <a class="home-btn text-center btn btn-primary btn-lg" href="/#!/about" role="button">About</a>
+      <a class="home-btn text-center btn btn-outline-secondary btn-lg" href="#" role="button">Home</a>
+      <a class="home-btn text-center btn btn-outline-secondary btn-lg" href="/#!/shop" role="button">Shop</a>
+      <a class="home-btn text-center btn btn-outline-secondary btn-lg" href="/#!/contact" role="button">Contact</a>
+      <a class="home-btn text-center btn btn-outline-secondary btn-lg" href="/#!/about" role="button">About</a>
     </p>
   </div>
 </div>
 
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="app\assets\Earings.png" alt="Card image cap">
+    <img class="home-card-img card-img-top" src="app\assets\Earings.png" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">SALE!!!</h4>
       <p class="card-text">Through this week only Aug 6th - Aug 12th, ALL earings will be 25% off!!!</p>
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="home-card-img card-img-top" src="app\assets\Key_Logo.jpg" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Jewelry Types</h4>
       <div class="list-group">
