--- a/app/components/home/home.scss
+++ b/app/components/home/home.scss
@@ -6,7 +6,7 @@
  color: #f7f7f9;
 }
 
-.card-img-top{
+.home-card-img{
   padding-left: 100px;
   padding-top: 25px;
   max-width:400px;
@@ -14,7 +14,7 @@
 }
 
 .home-btn{
-
+  color:white;
 }
 
 .lead{
