--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -1,13 +1,12 @@
-<ul class="jgd-navbar navbar navbar-toggleable-md navbar-light bg-faded">
+<ul class="jgd-navbar navbar fixed-top navbar-toggleable-md navbar-light bg-faded">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" href="/#!/home">J.G.D</a>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/#!/home">Home<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="/#!/home">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/#!/about">About</a>
@@ -26,6 +25,3 @@
     <a href="#" class="jgd-form-btn btn btn-success"><span class="fa fa-shopping-cart"></span></a>
   </div>
 </ul>
-
-
-  <!-- <a class="nav-link " href="/#!/about">About</a> -->
