changed the nav and added something to the about page

--- a/app/components/about/about.html
+++ b/app/components/about/about.html
@@ -1,1 +1,8 @@
-<h1> About Html</h1>
+<nav></nav>
+<div class="about-page container">
+  <h1 class="text-center">About</h1>
+  <div class="vid-holder container"></div>
+    <p class="text-center">This will a short paragraph about you and your company. Along with some pictures that will be strung out over the page and a video of you
+      explaining how you make your jewelry.</p>
+
+</div>
