--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,15 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3 text-center">Jewelry Gypsy Designs</h1>
-    <p class="lead">
-      <a class="home-btn text-center btn btn-outline-secondary btn-lg" href="#" role="button">Home</a>
-      <a class="home-btn text-center btn btn-outline-secondary btn-lg" href="/#!/shop" role="button">Shop</a>
-      <a class="home-btn text-center btn btn-outline-secondary btn-lg" href="/#!/contact" role="button">Contact</a>
-      <a class="home-btn text-center btn btn-outline-secondary btn-lg" href="/#!/about" role="button">About</a>
-    </p>
-  </div>
-</div>
-
+<nav></nav>
 <div class="card-deck">
   <div class="card">
     <img class="home-card-img card-img-top" src="app\assets\Earings.png" alt="Card image cap">
