--- a/app/components/nav/nav.scss
+++ b/app/components/nav/nav.scss
@@ -1,15 +1,8 @@
-.jgd-navbar{
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background: #e1bbff;
-}
-
-.jgd-form-btn{
-  margin-left: 10px;
-  border-left: 1px solid #969696;
-}
-
-.jgd-navbar >* a{
-  font-family: 'Great Vibes', cursive;
-  color: white !important;
+.jumbotron{
+ background-color: #e1bbff;
+ text-shadow: -20px 2px 17px black;
+ font-family: 'Great Vibes', cursive;
+ font-size: 100em;
+ color: #f7f7f9;
+ margin-bottom: 0px !important;
 }
