--- a/app/components/shop/shop.scss
+++ b/app/components/shop/shop.scss
@@ -1,12 +1,12 @@
 .shop-carousel{
-  background: #E4E4E4;
+  background: #8FB8ED;
   padding-top: 15px;
   padding-bottom: 15px;
   max-height: 500px;
 }
 
 .carousel-inner{
-  max-height:500px;
+  max-height:450px;
 }
 
 .carousel-item{
